--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
     "nexmo": "^2.9.1",
@@ -48,6 +51,7 @@
     "react-query-devtools": "^2.6.3",
     "react-redux": "^7.2.2",
     "react-toastify": "^7.0.3",
+    "read-more-react": "^1.0.10",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
