--- a/package.json
+++ b/package.json
@@ -45,11 +45,14 @@
     "react-dom": "17.0.1",
     "react-dropzone": "^11.3.1",
     "react-hook-form": "^6.15.4",
+    "react-masonry-layout": "^0.4.0",
     "react-multi-carousel": "^2.6.2",
     "react-player": "^2.9.0",
     "react-query": "^3.12.1",
     "react-query-devtools": "^2.6.3",
+    "react-read-more-read-less": "^1.0.7",
     "react-redux": "^7.2.2",
+    "react-responsive-masonry": "^2.1.2",
     "react-toastify": "^7.0.3",
     "read-more-react": "^1.0.10",
     "redux": "^4.0.5",
