--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
+    "@sentry/react": "^6.2.5",
+    "@sentry/tracing": "^6.2.5",
     "Validator": "^1.1.2",
     "aws-sdk": "^2.862.0",
     "axios": "^0.21.1",
