--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-read-more-read-less": "^1.0.7",
     "react-redux": "^7.2.2",
     "react-responsive-masonry": "^2.1.2",
+    "react-scroll-to-top": "^1.0.5",
     "react-toastify": "^7.0.3",
     "read-more-react": "^1.0.10",
     "redux": "^4.0.5",
