--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@material-ui/core": "^4.11.3",
     "@sentry/react": "^6.2.5",
     "@sentry/tracing": "^6.2.5",
-    "Validator": "^1.1.2",
     "aws-sdk": "^2.862.0",
     "axios": "^0.21.1",
+    "axios-hooks": "^2.6.1",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.2.6",
     "config": "^3.3.6",
@@ -67,6 +67,7 @@
     "superagent": "^6.1.0",
     "uuid": "^8.3.2",
     "validator": "^13.5.2",
+    "Validator": "^1.1.2",
     "web-push": "^3.4.4"
   }
 }
