--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
+    "@react-pdf-viewer/default-layout": "^2.5.0",
     "@sentry/react": "^6.2.5",
     "@sentry/tracing": "^6.2.5",
     "aws-sdk": "^2.862.0",
@@ -41,6 +42,7 @@
     "nprogress": "^0.2.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "pdf-viewer-reactjs": "^2.2.3",
     "prop-types": "^15.7.2",
     "razorpay": "^2.0.6",
     "react": "17.0.1",
@@ -49,6 +51,7 @@
     "react-hook-form": "^6.15.4",
     "react-masonry-layout": "^0.4.0",
     "react-multi-carousel": "^2.6.2",
+    "react-pdf-viewer": "^0.1.0",
     "react-player": "^2.9.0",
     "react-query": "^3.12.1",
     "react-query-devtools": "^2.6.3",
