--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@react-pdf-viewer/default-layout": "^2.5.0",
     "@sentry/react": "^6.2.5",
     "@sentry/tracing": "^6.2.5",
-    "Validator": "^1.1.2",
     "aws-sdk": "^2.862.0",
     "axios": "^0.21.1",
     "axios-hooks": "^2.6.1",
@@ -60,6 +59,7 @@
     "react-redux": "^7.2.2",
     "react-responsive-masonry": "^2.1.2",
     "react-scroll-to-top": "^1.0.5",
+    "react-share": "^4.4.0",
     "react-toastify": "^7.0.3",
     "read-more-react": "^1.0.10",
     "redux": "^4.0.5",
@@ -71,6 +71,7 @@
     "superagent": "^6.1.0",
     "uuid": "^8.3.2",
     "validator": "^13.5.2",
+    "Validator": "^1.1.2",
     "web-push": "^3.4.4"
   },
   "devDependencies": {
