--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,9 @@ jobs:
       - name: Deploy NodeJS app
         uses: appleboy/ssh-action@v0.1.2
         with:
-          host: ${{secrets.SSH_HOST}} # IP address of the server you wish to ssh into
-          username: ${{secrets.SSH_USERNAME}} # User of the server you want to ssh into
-          password: ${{secrets.SSH_PASSWORD}}
+          host: "root" # IP address of the server you wish to ssh into
+          username: "134.209.150.64" # User of the server you want to ssh into
+          password: "ojp!%poQLh4x"
     
           script: |
             cd airjadli-client
