--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,8 @@ jobs:
       - name: Deploy NodeJS app
         uses: appleboy/ssh-action@v0.1.2
         with:
-          host: "root" # IP address of the server you wish to ssh into
-          username: "134.209.150.64" # User of the server you want to ssh into
+          host: "134.209.150.64" # IP address of the server you wish to ssh into
+          username: "root" # User of the server you want to ssh into
           password: "ojp!%poQLh4x"
     
           script: |
