--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
             nvm install --lts
             node -v
             npm i pm2@latest -g
-            rm -rf node_modules package-lock.json
+            npm install --global yarn
             yarn install 
             npm run build
             pm2 delete  client
